base/wg-easy/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy-deploy
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/wg-easy/config 
          type: DirectoryOrCreate 
        name: config
