base/wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
spec:
  ports:
  - port: 51820
    protocol: UDP
    targetPort: 51820
    name: wg
  - port: 443
    protocol: TCP
    targetPort: 51821
    name: http
  selector:
    run: wg-easy
