base/wg-easy/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wg-easy-web
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: default
    domains:
      - main: "kouse.xyz"
        sans:
          - "*.kouse.xyz"
  routes:
  - kind: Rule
    match: Host(`vpn.kouse.xyz`) && ClientIP(`10.0.0.0/8`)
    priority: 0
    services:
    - kind: Service
      name: wg-easy
      namespace: wg-easy
      port: http
